# restaurant-api

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-0dec4b1128105387b1da44ae611df40a17e94ba49f12bf6f12c271341d877974.json  query-8291481de43e203f0cfe4e783cbd41b80101278de9fae746a5758a919cbb2ce2.json  query-a6e2d9ba5918c17c81c657cb952803cb8db67a9970c033cb2fab7255a528f679.json  query-b6ea858eab4607a78140c0f0fe4b83dd3db3526e4de5b465eae94e0c3777ae75.json  query-c70c645bd6a9e05dd83e106ad3980457617a3c5204bc281685e0cbdaf4ffed3e.json  query-d86c58aaa5d08750b6779bf31e75cd5e673d6c82af6590cbc2d2632ded011c8d.json  query-ec1d937421163df0100d4484e52ac62cf2b908481e34df34978cc49318c2c95e.json  query-fd763755459c373c48065a2d90802e254ad979b9ffac1e75ce886a0d77befe6c.json
configuration/: base.yaml  configuration.yaml  local.yaml
migrations/: 20240711174723_create_order_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/domain/: database_response.rs  item.rs  menu_items.rs  mod.rs  nat.rs  new_order.rs
src/routes/: delete.rs  mod.rs  order.rs  query.rs
tests/api/: client.rs  compare.rs  comparison.rs  delete.rs  health_check.rs  helpers.rs  main.rs  orders.rs  queries.rs
