[package]
name = "restaurant"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "restaurant"

[dependencies]
actix-web = "4.8.0"
config = { version = "0.14", default-features = false, features = ["yaml"] }
# We need the optional `derive` feature to use `serde`'s procedural macros:
# `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
# The feature is not enabled by default to avoid pulling in
# unnecessary dependencies for projects that do not need it.
serde = { version = "1", features = ["derive"]}
chrono = "0.4.15"
uuid = {version = "1.9.1", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-actix-web = "0.7.11"
serde-aux = "4.5.0"
log = "0.4.22"
unicode-segmentation = "1.11.0"
validator = "0.18.1"
fake = "2.9.2"
# We need the `json` feature flag to serialize/deserialize JSON payloads
reqwest = {version = "0.12.5", default-features = false, features = ["json", "rustls-tls"] }
rand = { version = "0.8", features=["std_rng"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
 #   "runtime-actix-rustls",
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
actix-rt = "2.10.0"
claim = "0.5.0"
once_cell = "1.19.0"
tokio = {version = "1.38.0", features = ["rt", "macros"]}
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
serde_json = "1"
wiremock = "0.5"
linkify = "0.10.0"
